--- a/JOGO/JOGO.html
+++ b/JOGO/JOGO.html
@@ -45,6 +45,7 @@
         <div id="score">Pontuação: 0</div> <!-- Novo elemento de pontuação -->
 
         <button onclick="inicioJogo()" id="startButton" class="start-button">Iniciar Jogo</button>
+        <h1>Teste</h1>
 
         <div id="questionBox" class="question-box" style="display: none;">
             <h2>Pergunta:</h2>
