--- a/JOGO/historia.html
+++ b/JOGO/historia.html
@@ -44,13 +44,12 @@
 
          </div>
     </div>
-    <a href="JOGO.html"><button id="startbutton2" class="startbutton2">Jogar</button> </a>
+<a href="dino/index.html"><button id="startbutton2"  class="startbutton2">Jogar</button></a>
     
    </div>
-   
-  
    
    <script src="js/script.js"></script>
     
 
 </body>
+</html>
